tests/negative/test_explicit_cast_impl_into.orb
explicit t i32;

fnc main () () {
    sym (a:t 0:i32);
};